objects/Deviated_Lead_time_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deviated_Lead_time_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deviated Lead-time Requests</relationshipLabel>
        <relationshipName>Deviated_Lead_time_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <inlineHelpText>Additional Comment related to this request.  Specific information such as part number, nomenclature, quantity, etc should be entered bottom by individual &quot;Deviated Request Line Item&quot;.</inlineHelpText>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Best_Delivery__c</fullName>
        <inlineHelpText>Best delivery date for your request as determined by your Customer Service Representative</inlineHelpText>
        <label>Best Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deviated_Lead_time_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Acknowledge_Date__c</fullName>
        <label>Initial Acknowledge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If known, please list the opportunity associated with this request.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deviated Lead-time Requests</relationshipLabel>
        <relationshipName>Deviated_Lead_time_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <inlineHelpText>Your company&apos;s purchase order number</inlineHelpText>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Charged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if a short lead-time premium is charged.</inlineHelpText>
        <label>Premium Charged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_order_premium__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if purchase order you have sent or will send to Danfoss Power Solutions already includes an expedite premium.</inlineHelpText>
        <label>PO does/will include expedite fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Other__c</fullName>
        <label>Reason Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>Select the reason for the request</inlineHelpText>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Interchange, direct competitor replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No local inventory for this customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prototype</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned aftermarket/service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned production increase</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Premium_Waiver__c</fullName>
        <inlineHelpText>If premium is waived, please list the reason why</inlineHelpText>
        <label>Reason for Premium Waiver</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deviated_Lead_time_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Lead_Time__c</fullName>
        <inlineHelpText>Enter the standard lead time in weeks</inlineHelpText>
        <label>Standard Lead Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Prototype_requires_Opportunity</fullName>
        <active>false</active>
        <description>If reason = prototype, then opportunity field must be filled in.</description>
        <errorConditionFormula>IF( AND( ISPICKVAL( Reason__c , &apos;Prototype&apos;) , Opportunity__c =null), true, false)</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>An opportunity must be selected if reason is Prototype.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReasonOtherRequired</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Reason__c, &apos;Other&apos;) &amp;&amp; Reason_Other__c == &apos;&apos;, true, false)</errorConditionFormula>
        <errorDisplayField>Reason_Other__c</errorDisplayField>
        <errorMessage>You must enter the other reason</errorMessage>
    </validationRules>
</CustomObject>